Tweaks to simplify autocomplete + create tests